fix: width, index, overflow, positions

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,9 @@
 
+.fl-components{
+  position: relative;
+  overflow: visible;
+}
+
 .fl-libraries {
   position: relative;
   top: 0;
